--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Información sobre Países</h1>
-  <div id="countries-list"></div>
+  <div id="paises-container" ></div>
 
   <script src="./js/script.js"></script>
 </body>
